# OmniGibson

./: benchmark.sh  main.py  main_config.yaml  setup.py  test.py
.github/workflows/: benchmark.yml  build-containers.yml  ci.yml  tests.yml
omnigibson/: __init__.py  macros.py  simulator_vr.py  vr_config.yaml
omnigibson/action_primitives/: action_primitive_set_base.py  baseline_action_primitives.py  starter_semantic_action_primitives.py
omnigibson/configs/: fetch_behavior.yaml
omnigibson/controllers/: multi_finger_gripper_controller.py
omnigibson/examples/robots/: robot_control_example.py
omnigibson/examples/vr/: ig3_vr_test_demo.py  vr_simple_demo.py
omnigibson/examples/xr/: vr_simple_demo.py
omnigibson/objects/: controllable_object.py
omnigibson/robots/: __init__.py  behavior_robot.py  behaviorbot.py  manipulation_robot.py  robot_base.py  tiago.py
omnigibson/tasks/: behavior_task.py
omnigibson/utils/: control_utils.py  motion_planning_utils.py  transform_utils.py  vr_utils.py
omnigibson/vr/: CMakeLists.txt
omnigibson/vr/cpp/: vrsys.cpp  vrsys.h
omnigibson/xr/: vr.py
omnigibson/xr/cpp/: CMakeLists.txt
omnigibson/xr/cpp/htc/: HTCTrackingSys.cpp  HTCTrackingSys.h
tests/benchmark/: profiling.py
